--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-piano",
-  "version": "3.1.2",
+  "name": "@fabb/react-piano",
+  "version": "3.2.0-pre",
   "description": "A responsive, customizable react piano keyboard component",
   "main": "dist/react-piano.cjs.js",
   "module": "dist/react-piano.esm.js",
